@@ -38,6 +38,15 @@ log4j.appender.stdout.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss}] %m%n
 
 
 
+######## multimatch ids
+log4j.logger.multimatch=debug, multimatch
+log4j.appender.multimatch=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.multimatch.DatePattern='.'yyyy-MM
+log4j.appender.multimatch.Append=true
+log4j.appender.multimatch.File=logs/multimatch.log
+log4j.appender.multimatch.layout=org.apache.log4j.PatternLayout
+log4j.appender.multimatch.layout.ConversionPattern=%d %p [%c] - %m%n
+
 ######## insertedIds
 log4j.logger.insertedIds=debug, logInsertedIds
 log4j.appender.logInsertedIds=org.apache.log4j.DailyRollingFileAppender
