@@ -1,3 +1,7 @@
+Sep 25, 2020
+  improved matching
+  added separate logging of multimatches
+
 Aug 03, 2020
   build.gradle: changed app name to 'rna-central-pipeline' from RNACentral' to align code with github
 
